# slam

./: .gitignore  AGENTS.md  CLAUDE.md  小论文完成方案_hectorSLAM地图质量增强定位_格式统一版.docx  小论文完成方案_三维点云到二维栅格地图生成优化_AMCL鲁棒定位研究.docx  每日总结.md  硕士论文完成方案_激光SLAM鲁棒建图与定位研究.docx
docs/: Cartographer_2D源码中文导读.md  innovation1_directional_adaptive_fusion.md  innovation2_slip_adaptive_backend.md  uinnovation1_directional_adaptive_fusion.md  硕士论文完成方案_激光SLAM鲁棒建图与定位研究.txt  论文方向升级版.md
external_skills/agency-agents-zh/: AI专家用途清单.md
paper_exp/analysis/: aloam_mapping_01_eval.json  aloam_mapping_01_eval.md  aloam_mapping_01_eval_baseframe.json  aloam_mapping_01_eval_baseframe.md  aloam_mapping_01_eval_ground_vehicle.json  aloam_mapping_01_eval_ground_vehicle.md  aloam_mapping_01_eval_mapped_pose.csv  aloam_mapping_01_eval_odom_pose.csv  aloam_mapping_01_odometry_fix_compare.md  mapping_01_M0_baseline_metrics.json  mapping_01_M0_fused_best_metrics.json  mapping_01_M0_fused_best_report.md  mapping_01_M0_projection_optimized_low04_metrics.json  mapping_01_M0_projection_optimized_low04_report.md  mapping_01_M0_projection_optimized_low06_metrics.json  mapping_01_M0_projection_optimized_low08_rerun_metrics.json  mapping_01_M0_projection_optimized_low08_rerun_report.md  mapping_01_M0_projection_optimized_metrics.json  mapping_01_M0_projection_optimized_report.md  mapping_01_M0_projection_optimized_v2_metrics.json  mapping_01_M0_projection_optimized_v2_report.md  mapping_01_M0_projection_optimized_v3_metrics.json  mapping_01_M0_projection_optimized_v3_report.md  mapping_01_M0_projection_optimized_v4_metrics.json  mapping_01_M0_projection_optimized_v4_report.md  mapping_01_M0_projection_optimized_wall_continuity_metrics.json  mapping_01_M0_projection_optimized_wall_continuity_report.md  mapping_01_M0_projection_optimized_wall_only_v2_metrics.json  mapping_01_M0_projection_optimized_wall_only_v2_report.md  mapping_01_M1_denoised_metrics.json  mapping_01_M2_structure_metrics.json  mapping_01_M3_enhanced_metrics.json  sc_aloam_mapping_01_full_run_report.md
paper_exp/maps/mapping_01/M0_baseline/: my_map.pgm  my_map.yaml
paper_exp/maps/mapping_01/M0_fused_best/: my_map.pgm
paper_exp/maps/mapping_01/M0_projection_optimized_low04/: my_map.pgm
paper_exp/maps/mapping_01/M0_projection_optimized_low06/: my_map.pgm
paper_exp/maps/mapping_01/M0_projection_optimized_low08_rerun/: my_map.pgm
paper_exp/maps/mapping_01/M0_projection_optimized_v2/: my_map.pgm
paper_exp/maps/mapping_01/M0_projection_optimized_v3/: my_map.pgm
paper_exp/sc_aloam/: .gitignore
paper_exp/sc_aloam/mapping_01_full_run/: odom_poses.txt  optimized_poses.txt  singlesession_posegraph.g2o  times.txt
src/A-LOAM-devel/: CMakeLists.txt  package.xml
src/A-LOAM-devel/launch/: aloam_mapping_01_bag_preview.launch  aloam_velodyne_VLP_16_deskew.launch  aloam_velodyne_VLP_16_scout_mapping.launch
src/A-LOAM-devel/rviz_cfg/: aloam_bag_preview.rviz  aloam_velodyne.rviz
src/A-LOAM-devel/scripts/: evaluate_aloam_result.py
src/A-LOAM-devel/src/: cloudFrameTransformer.cpp  kittiHelper.cpp  laserMapping.cpp  laserOdometry.cpp  laserPosegraphOptimization.cpp  lidarFactor.hpp  scanRegistration.cpp
src/cartographer/configuration_files/: pose_graph.lua  trajectory_builder_2d.lua
src/function_module/: CMakeLists.txt  package.xml
src/function_module/launch/: gmapping_slam.launch  nav_test.launch  neo_pure_loc.launch  object_detection_pub.launch  pure_locate.launch  scout_navigation.launch  scout_slam.launch  scout_slam_pro.launch  testtf.launch
src/function_module/rviz/: gmapping.rviz  nav.rviz  pure_loc.rviz  test.rviz
src/function_module/scripts/: object_detection_pub.py
src/function_module/src/: get_pose.py
src/lslidar_ros/: README.md
src/my_navigation/: CMakeLists.txt  package.xml
src/my_navigation/config/: cartographer_scout_2d.lua  innovation1_baseline_a_static_low.lua  innovation1_baseline_b_static_high.lua  innovation1_proposed_dynamic_anisotropic.lua  innovation2_baseline_static_high.lua  innovation2_baseline_static_low.lua  innovation2_proposed_slip_adaptive.lua  landmarks.yaml  scan_r045_h0025.lua  scan_r045_h0030.lua  scan_r050_h0025.lua  scan_r050_h0030.lua  scan_r055_h0025.lua  scan_r055_h0030.lua
src/my_navigation/launch/: full_auto_search.launch  online_full.launch  scout_mini_mapping_local_grid.launch
src/my_navigation/maps/: my_map.pgm  my_map.yaml
src/my_navigation/rviz/: mapping_local_grid.rviz
src/my_navigation/src/: aloam_pose_bridge.cpp  amcl_corrector.cpp  local_grid_mapper.cpp  obstacle_detector.cpp  obstacle_detector.h
src/pointcloud_to_grid/: CMakeLists.txt  README_output_downsampled_map.md  package.xml
src/pointcloud_to_grid/launch/: bag_to_2d_map.launch  generate_output_map.launch  innovation1_m0.launch  innovation1_m0_low04.launch  innovation1_m0_low06.launch  innovation1_m0_low08_rerun.launch  innovation1_m0_wall_only.launch
src/pointcloud_to_grid/scripts/: compute_map_metrics.py  crop_roi_map.py  enhance_map.py  fuse_projection_maps.py  manual_wall_connect_map.py  pcd_to_nav_map.py  pointcloud_projection_optimizer.py  repair_projection_wall.py  save_stable_map.py
src/pointcloud_to_grid/test/: test_crop_roi_map.py  test_manual_wall_connect_map.py  test_pcd_to_nav_map.py
src/search_explorer/: CMakeLists.txt  package.xml
src/search_explorer/include/: explorer_controller.h
src/search_explorer/launch/: explorer.launch
src/search_explorer/src/: explorer_controller.cpp
src/ugv_gazebo_sim-master/scout/: README_SCOUT_MINI_SIM.md
src/ugv_gazebo_sim-master/scout/scout_gazebo_sim/: CMakeLists.txt  package.xml
src/ugv_gazebo_sim-master/scout/scout_gazebo_sim/launch/: scout_mini_cartographer_2d.launch  scout_mini_diff_drive_empty_world.launch  spawn_scout_mini_diff_drive.launch
src/ugv_gazebo_sim-master/scout/scout_gazebo_sim/scripts/: moving_obstacle_controller.py  pointcloud_to_pointcloud2.py
src/ugv_gazebo_sim-master/scout/scout_gazebo_sim/urdf/: scout_mini_sim_extras.xacro
src/ugv_gazebo_sim-master/scout/scout_gazebo_sim/worlds/: clearpath_playpen.world
(+56 files in other folders)
