<?xml version="1.0"?>
<package format="2">
  <name>my_navigation</name>
  <version>0.0.0</version>
  <description>Cartographer 2D mapping and robot-centered local grid mapping for Scout Mini.</description>

  <maintainer email="slam@todo.todo">slam</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>scout_gazebo_sim</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
  </export>
</package>
