<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_to_grid</name>
  <version>0.1.0</version>
  <description>Offline converter from A-LOAM PCD point clouds to ROS map_server occupancy maps.</description>

  <maintainer email="slam@todo.todo">slam</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend>

  <test_depend>rostest</test_depend>

  <export/>
</package>
