<package format="2">
  <name>search_explorer</name>
  <version>0.0.1</version>
  <description>Exploration and return control for Scout Mini</description>
  <maintainer email="your@email.com">YourName</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>angles</depend>
</package>
